--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -21,12 +21,16 @@
 }
 
 .button.triple {
+    font-weight: 200;
     grid-column: span 3;
 }
 
 .button.operation {
     background-color: #fa8231;
     color: #fff;
+    border-right: solid 1px #c06325;
+    border-bottom: solid 1px #c06325;
+    font-weight: 200;
 }
 
 .button.operation:active {
